--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="var" path="USERLIBS_DIR/TalonSRXLibJava.jar"/>
 	<classpathentry kind="lib" path="/Users/jackderuntz/wpilib/user/java/lib/CTRLib.jar"/>
 	<classpathentry kind="lib" path="/Users/jackderuntz/wpilib/user/java/lib/navx_frc.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
